<resources>
    <string name="app_name">ResumeBuilder</string>
    <string name="title_resume_builder">Resume Builder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_profile">Home</string>
    <string name="nav_about">Photos</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Profile</item>
        <item>About</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>

    <!--FacebookAPI-->
    <string name="facebook_app_id">1014729748661094</string>

    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_profile">MainProfile</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile_main">ProfileMainActivity</string>
    <string name="title_activity_resume_main_page">ResumeMainPage</string>
    <string name="projects_label">Projects</string>
    <string name="name">Name :</string>
    <string name="role">Role :</string>
    <string name="summary">Summary :</string>
    <string name="save">SAVE</string>
    <string name="interests">INTERESTS</string>
    <string name="education">EDUCATION</string>
    <string name="projects">PROJECTS</string>
    <string name="summary1">SUMMARY</string>
    <string name="years_of_experience">Years of Experience :</string>
    <string name="email">Email :</string>
    <string name="name1">Name :</string>
    <string name="about">ABOUT</string>
    <string name="sdk_version">SDK Version :</string>
    <string name="logout">LOGOUT</string>
    <string name="edit">EDIT</string>
    <string name="institute">Institute :</string>
    <string name="course">Course :</string>
    <string name="year">Year :</string>
    <string name="interest">Interest :</string>
    <string name="android_studio">Android Studio</string>

</resources>
