<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:text="@string/name"
        android:textSize="@dimen/fontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/pro_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:focusable="true"/>
    <TextView
        android:textSize="@dimen/fontSize"
        android:text="@string/role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/pro_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
       android:focusable="true" />
    <TextView
        android:text="@string/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fontSize"/>
    <EditText
        android:id="@+id/pro_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:focusable="true"/>
    <Button
        android:id="@+id/pro_save_button"
        android:layout_gravity="center"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>