<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/userImage_imageView"
            android:layout_width="@dimen/profile_width"
            android:layout_height="@dimen/profile_height"
            android:paddingTop="@dimen/nav_header_vertical_spacing" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/name1"
                    android:id="@+id/user_name_txtView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontSize"/>
                <TextView
                    android:id="@+id/user_name_txtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/email"
        android:id="@+id/user_emailID_txtView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="@dimen/fontSize"/>
    <TextView
        android:id="@+id/user_emailID_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/user_experince_txtView1"
                    android:text="@string/years_of_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontSize"
                    android:paddingTop="@dimen/paddingTop"/>
                <TextView
                    android:id="@+id/experience_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>










</RelativeLayout>